mobile chat spill fix part 2

--- a/webapp/eminstitute/app/theme/css/eminstitute.css
+++ b/webapp/eminstitute/app/theme/css/eminstitute.css
@@ -630,6 +630,7 @@ a.primary:hover .fas {
 	padding: 6px;
 	margin-top:3px;
 	border:1px dashed #999;
+	
 }
 .chatterbox-chat .goalstatus:hover {
 	background-color:#f3f3f3;
@@ -889,6 +890,10 @@ a.btn-toolbar.topicselected {
 	
 	.message-attach-box {
 	width:250px;
+	}
+	
+	.chatterbox-chat .card-task {
+	width:186px;
 	}
 }
 .feedcard .feedcard-collective {
